tests/ui/privacy/private-in-public-ill-formed.stderr
error[E0446]: private type `aliases_pub::Priv` in public interface
  --> $DIR/private-in-public-ill-formed.rs:15:9
   |
LL |     struct Priv;
   |     ----------- `aliases_pub::Priv` declared as private
...
LL |         pub fn f(arg: Priv) {}
   |         ^^^^^^^^^^^^^^^^^^^ can't leak private type

error[E0445]: private trait `aliases_pub::PrivTr` in public interface
  --> $DIR/private-in-public-ill-formed.rs:15:9
   |
LL |     trait PrivTr {
   |     ------------ `aliases_pub::PrivTr` declared as private
...
LL |         pub fn f(arg: Priv) {}
   |         ^^^^^^^^^^^^^^^^^^^ can't leak private trait

error[E0446]: private type `aliases_pub::Priv` in public interface
  --> $DIR/private-in-public-ill-formed.rs:15:9
   |
LL |     struct Priv;
   |     ----------- `aliases_pub::Priv` declared as private
...
LL |         pub fn f(arg: Priv) {}
   |         ^^^^^^^^^^^^^^^^^^^ can't leak private type

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0445, E0446.
For more information about an error, try `rustc --explain E0445`.
